# RangeModeQuery

./: README.md
BruteForce/: NormalMethod.cpp
Dr.He with bit/: main.cpp
Dr.He with rrr/: main.cpp
FirstAlgorithm/: CMakeLists.txt  CompareApproximate.cpp  FetchRealData.cpp  GenerateNormalQuery.cpp  GenerateQuery.cpp  NormalDistributionData.cpp  NormalMethod.cpp  Test.cpp  main.cpp  original_first.cpp  small_test.cpp
SecondAlgorithm/: main.cpp
ThirdAlgorithm/: main.cpp
Timothy with bit/: CompareApproximate.cpp  MaxHeap.cpp  NormalDistributionData.cpp  NormalMethod.cpp  RandomData.cpp  ReadQuery.cpp  RealBookData.cpp  RealData.cpp  RealipGenerator.cpp  ZipfDistributionData.cpp  main.cpp  original.cpp
Timothy with rrr/: main.cpp
sqrtN/: main.cpp
